# AwesomeSalesforceSkills

./: .gitignore  AGENT_RULES.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDOFF.md  CURSOR_TEST_SCRIPT.md  EXIT_DOC.md  LICENSE  MASTER_QUEUE.md  PRE_GO_LIVE_CHECKLIST.md  README.md  SECURITY.md  SKILL-AUTHORING-STANDARD.md  SKILLS_BACKLOG.md
.githooks/: pre-commit
commands/: analyze-field-impact.md  architect-perms.md  assess-waf.md  audit-approvals.md  audit-case-escalation.md  audit-record-types.md  audit-reports.md  audit-router.md  audit-validation-rules.md  build-flow.md  design-duplicate-rule.md  design-knowledge-taxonomy.md  design-lead-routing.md  design-object.md  design-omni-channel.md  design-sales-stages.md  design-sandbox-strategy.md  diff-users.md  govern-picklists.md  govern-prompt-library.md  migrate-workflow-pb.md  new-skill.md  plan-release-train.md  preflight-load.md  review-agentforce-action.md  run-queue.md
config/: skill-frontmatter.schema.json  skill-scaffold.md
docs/: MIGRATION.md  SKILLS.md  SKILLS_TEST_REPORT.md  installing-single-agents.md  multi-ai-parity.md
evals/: README.md  framework.md
knowledge/: README.md  sources.yaml
mcp/sfskills-mcp/: README.md  pyproject.toml
mcp/sfskills-mcp/docs/: CONNECT.md
mcp/sfskills-mcp/src/sfskills_mcp/: __init__.py  __main__.py  agents.py  org.py  paths.py  probes.py  server.py  sf_cli.py  skills.py
mcp/sfskills-mcp/tests/: test_agent_bundle.py  test_agents.py  test_export_parity.py  test_sf_cli.py  test_skills.py  test_tools.py
pipelines/: lexical_index.py  validators.py
(+1857 files in other folders)
